--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,61 @@
 {
     "rules": {
         "arrow-spacing": 2,
-        "brace-style": [2, "stroustrup", { "allowSingleLine": true }],
+        "brace-style": [
+            2,
+            "stroustrup",
+            {
+                "allowSingleLine": true
+            }
+        ],
         // We'd possibly like to remove the 'properties': 'never' one day.
-        "camelcase": [2, { "properties": "never" }],
-        "comma-dangle": [2, "always-multiline"],
-        "comma-spacing": [2, { "before": false, "after": true }],
+        "camelcase": [
+            2,
+            {
+                "properties": "never"
+            }
+        ],
+        "comma-dangle": [
+            2,
+            "always-multiline"
+        ],
+        "comma-spacing": [
+            2,
+            {
+                "before": false,
+                "after": true
+            }
+        ],
         "constructor-super": 2,
         "curly": 0,
         "eol-last": 2,
-        "eqeqeq": [2, "allow-null"],
+        "eqeqeq": [
+            2,
+            "allow-null"
+        ],
         "guard-for-in": 0,
-        "indent": [1, 4, {"SwitchCase": 1}],
+        "indent": [
+            1,
+            4,
+            {
+                "SwitchCase": 1
+            }
+        ],
         "keyword-spacing": 2,
-        "linebreak-style": [2, "unix"],
-        "max-len": [2, 84, 4, { "ignoreUrls": true, "ignorePattern": "\\brequire\\([\"']|eslint-disable", "ignoreComments": true, }],
+        "linebreak-style": [
+            2,
+            "unix"
+        ],
+        "max-len": [
+            2,
+            84,
+            4,
+            {
+                "ignoreUrls": true,
+                "ignorePattern": "\\brequire\\([\"']|eslint-disable",
+                "ignoreComments": true,
+            }
+        ],
         "no-alert": 2,
         "no-array-constructor": 2,
         "no-console": 2,
@@ -34,17 +75,25 @@
         "no-undef": 0,
         "no-unexpected-multiline": 2,
         "no-unreachable": 2,
-        "no-unused-vars": [2, {"args": "none", "varsIgnorePattern": "^_*$"}],
+        "no-unused-vars": [
+            2,
+            {
+                "args": "none",
+                "varsIgnorePattern": "^_*$"
+            }
+        ],
         "no-useless-call": 2,
         "no-with": 2,
-        "one-var": [2, "never"],
+        "one-var": [
+            2,
+            "never"
+        ],
         "prefer-const": 2,
         "prefer-spread": 0, // re-enable once we use es6
-        "semi": [2, "always"],
-        "space-before-blocks": 2,
-        "space-before-function-paren": [2, "never"],
-        "space-infix-ops": 2,
-        "space-unary-ops": 2,
+        "semi": [
+            2,
+            "always"
+        ],
         // ---------------------------------------
         // Stuff we explicitly disable.
         // We turned this off because it complains when you have a
@@ -55,29 +104,23 @@
         // ---------------------------------------
         // TODO(csilvers): enable these if/when community agrees on it.
         "prefer-arrow-callback": 0,
-        "object-curly-spacing": [0, "always"],
+        "object-curly-spacing": [
+            0,
+            "always"
+        ],
         // Might be nice to turn this on one day, but since we don't
         // use jsdoc anywhere it seems silly to require it yet.
         "valid-jsdoc": 0,
         "require-jsdoc": 0
-    },
-    "ecmaFeatures": {
-        "arrowFunctions": true,
-        "blockBindings": true,
-        "classes": true,
-        "destructuring": true,
-        "experimentalObjectRestSpread": true,
-        "forOf": true,
-        "jsx": true,
-        "restParams": true,
-        "spread": true,
-        "templateStrings": true
     },
     "env": {
         "es6": true,
         "node": true,
         "browser": true
     },
-    "extends": "eslint:recommended",
+    "extends": [
+        "eslint:recommended",
+        "prettier"
+    ],
     "root": true
 }
