--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     ],
     "devDependencies": {
         "browserify": "^13.3.0",
-        "watchify": "^3.9.0",
-        "uglify-js": "~2.7.5",
         "clean-css-cli": "^4.0.0",
-        "eslint": "^3.13.0"
+        "eslint": "^3.13.0",
+        "eslint-config-prettier": "^6.9.0",
+        "uglify-js": "~2.7.5",
+        "watchify": "^3.9.0"
     },
-    "license": "MIT"
+    "license": "MIT",
+    "dependencies": {
+        "katex": "^0.11.1"
+    }
 }
